$Rev$
[2007/09/21]
mHelp.py            Fix webbrowser bug. Thanks Tom Eubank
                    remove finddialog.xrc and finddialog_zh_CN.xrc
import_utils.py     When evalating a word, try to import it first.

[2007/09/20]
FindReplaceDialog.py Removed replaced with FindReplace.py and refactor find and replace

[2007/09/19]
SvnSupport.py       Fix svn_plugin crash in Linux
common.py           Add get_config_file_obj() function, and change the invoke.
PrefDialog.py dict4ini.py
                    Add config.ini support in Preference Dialog

[2007/09/17]
FindInFiles.py DirBrowser.py
                    Improve Find in Files process with thread
mEditorCtrl.py      If save file failed, then invoke save as
ScriptDialog.py ShellDialog.py
                    Fix shortcuts from 1-based bug
plugin_spec.txt     Update document
mLineending.py Editor.py
                    Fix line end mix checking bug also including twice prompt dialog bug
                    
[2007/09/15]
DirBrowser.py       Fix directory browser insert node bug
Editor.py mUnicode.py
                    Don't create a tmp file again, directly save the file
mClassBrowser.py    Add option to control if show the docstring in class browser window.
                    rename OutlookBrowser.py to OutlineBrowser.py
meide.py            Update to latest version
PrefDialog.py       Improve pref dialog creation, and support custom meide control.
FindInFiles.py      Change Find in Files dialog to panel
                    
[2007/09/09]
pyflakes SyntaxCheck.py
                    Update to svn version
[2007/09/08]
Entry.py            Rewrite the code with meide module

[2007/09/06]
DirBrowser.py       Fix refresh bug

[2007/09/02]
EditorFactory.py Editor.py
                    Fix open un-exists file will popup two message dialog bug
DirBrowser.py       Fix adding empty directory error
                    
[2007/09/01]
DirBrowser.py 
                    Fix adding empty directory error
                    
[2007/08/29]